--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ header: Toxic-Lab (HK) Homepage
 <p>Development guide</p>
 <ul>
   {% for post in site.posts limit: 5 %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
 
